--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "uuid": "^9.0.1"
   },
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "start": "node dist/start.js",
+    "dev": "ts-node src/start.ts",
     "build": "tsc",
     "server1": "ts-node src/test/server1.ts",
     "server2": "ts-node src/test/server2.ts"
