--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,21 @@
 {
-    "version": "1.0.0",
-    "configurations": [
-      {
-        "name": "TS-Node",
-        "type": "node",
-        "request": "launch",
-        "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/ts-node",
-        "runtimeArgs": [
-          "--transpile-only",
-          // if you use esm
-          "--esm" 
-        ],
-        "program": "${file}",
-        "cwd": "${workspaceRoot}",
-        "internalConsoleOptions": "openOnSessionStart",
-        "skipFiles": ["<node_internals>/**", "node_modules/**"]
-      }
-    ]
-  }
-  
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch Balancer",
+      "program": "${workspaceFolder}/src/start.ts",
+      "preLaunchTask": "npm: build",
+      "sourceMaps": true,
+      "smartStep": true,
+      "internalConsoleOptions": "openOnSessionStart",
+      "outFiles": [
+                "${workspaceFolder}/dist/**/*.js"
+              ]
+    }
+  ]
+}
