--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "uuid": "^9.0.1"
   },
   "scripts": {
+    "preStart":"npm run build",
     "start": "node dist/start.js",
     "dev": "ts-node src/start.ts",
     "build": "tsc",
