--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "outDir": "./dist",
       "rootDir": "./src",
       "strict": true,
+      "sourceMap":true,
       "esModuleInterop": true,
       "resolveJsonModule": true,
     },
